--- a/MediaConverter/mainwindow.ui
+++ b/MediaConverter/mainwindow.ui
@@ -258,7 +258,7 @@
       <property name="geometry">
        <rect>
         <x>356</x>
-        <y>90</y>
+        <y>130</y>
         <width>61</width>
         <height>21</height>
        </rect>
@@ -271,7 +271,7 @@
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>90</y>
+        <y>130</y>
         <width>51</width>
         <height>20</height>
        </rect>
@@ -283,14 +283,14 @@
      <widget class="QLabel" name="label_17">
       <property name="geometry">
        <rect>
-        <x>60</x>
-        <y>50</y>
-        <width>321</width>
+        <x>140</x>
+        <y>10</y>
+        <width>171</width>
         <height>16</height>
        </rect>
       </property>
       <property name="text">
-       <string>Pilih folder tempat menyimpan file hasil konversi : </string>
+       <string>Opsi input hasil konversi : </string>
       </property>
      </widget>
      <widget class="QToolButton" name="outputStartButton">
@@ -323,7 +323,7 @@
       <property name="geometry">
        <rect>
         <x>296</x>
-        <y>90</y>
+        <y>130</y>
         <width>51</width>
         <height>21</height>
        </rect>
@@ -336,7 +336,7 @@
       <property name="geometry">
        <rect>
         <x>75</x>
-        <y>90</y>
+        <y>130</y>
         <width>211</width>
         <height>21</height>
        </rect>
@@ -346,7 +346,7 @@
       <property name="geometry">
        <rect>
         <x>76</x>
-        <y>130</y>
+        <y>160</y>
         <width>211</width>
         <height>21</height>
        </rect>
@@ -356,13 +356,82 @@
       <property name="geometry">
        <rect>
         <x>3</x>
-        <y>130</y>
+        <y>160</y>
         <width>71</width>
         <height>20</height>
        </rect>
       </property>
       <property name="text">
        <string>Filename :</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="outputCompressRatio">
+      <property name="geometry">
+       <rect>
+        <x>149</x>
+        <y>96</y>
+        <width>141</width>
+        <height>26</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_23">
+      <property name="geometry">
+       <rect>
+        <x>16</x>
+        <y>100</y>
+        <width>131</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Compression Rate :</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_24">
+      <property name="geometry">
+       <rect>
+        <x>60</x>
+        <y>70</y>
+        <width>81</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Frame Rate :</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_25">
+      <property name="geometry">
+       <rect>
+        <x>90</x>
+        <y>40</y>
+        <width>62</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Bitrate :</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="outputFrameRate">
+      <property name="geometry">
+       <rect>
+        <x>149</x>
+        <y>66</y>
+        <width>141</width>
+        <height>26</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="outputBitrate">
+      <property name="geometry">
+       <rect>
+        <x>150</x>
+        <y>35</y>
+        <width>141</width>
+        <height>26</height>
+       </rect>
       </property>
      </widget>
     </widget>
